refactor(service): refactor JobSourceService with audit logs and cleaner methods